# Geophysics

./: README.md  pyproject.toml
examples/: driver.py
src/my_project_package.egg-info/: PKG-INFO  SOURCES.txt
src/my_python_package/: operators.py
