[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project_package"
version = "0.0.1"
authors = [
	{ name = "Ben Corner", email = "Ben.Corner88@gmail.com"},
]
description = "Python package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"numpy",
	"matplotlib",
	"scipy",
	"pandas",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/Ben-Corner/Geophysics"
